--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 python = "^3.12"
 taskipy = "^1.12.2"
 streamlit = "^1.33.0"
+pydantic = "^2.7.0"
+openpyxl = "^3.1.2"
+sqlalchemy = "^2.0.29"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
@@ -24,3 +28,4 @@ docs = "mkdocs serve"
 git-config = "pre-commit install && pre-commit install --hook-type commit-msg"
 pre-commit = "git add . && pre-commit run"
 commit = "git add . && cz commit"
+run = "streamlit run src/main.py"
