--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ streamlit = "^1.33.0"
 pydantic = "^2.7.0"
 openpyxl = "^3.1.2"
 sqlalchemy = "^2.0.29"
-psycopg2 = "2.9.9"
+psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
