--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ openpyxl = "^3.1.2"
 sqlalchemy = "^2.0.29"
 psycopg2-binary = "^2.9.9"
 psycopg2 = "^2.9.9"
+xlsxwriter = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
